--- a/helloMVC/config/.env
+++ b/helloMVC/config/.env
@@ -1,6 +1,6 @@
-DB_NAME='contact'
-DB_USER='hello'
-DB_PASSWORD='hello$1213'
-DB_HOST='localhost'
+DB_NAME=contact
+DB_USER=hello
+DB_PASSWORD=hello$1213
+DB_HOST=localhost
 
-APP_URL='http://localhost'
+APP_URL=http://localhost
